<resources>
    <string name="app_name">DroidHub</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up_text">Sign up</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="name_text">Name</string>
    <string name="or_login_text">or Login</string>
    <string name="log_in">Log in</string>
    <string name="or_sign_up">or Sign up</string>
    <string name="login">Login</string>
    <string name="add_a_file">Add a file</string>
    <string name="file_name_hint">File name goes here</string>
    <string name="upload_file">Upload file</string>
    <string name="choose_file">Choose file</string>
</resources>