<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".UploadFragment">

        <TextView
            android:id="@+id/addFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/text_field_parent"
            android:fontFamily="@font/montserrat"
            android:text="@string/add_a_file"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/text_field_margin"
            android:hint="@string/file_name_hint"
            app:boxBackgroundColor="@color/text_box_color"
            app:boxCornerRadiusBottomEnd="@dimen/box_radius"
            app:boxCornerRadiusBottomStart="@dimen/box_radius"
            app:boxCornerRadiusTopEnd="@dimen/box_radius"
            app:boxCornerRadiusTopStart="@dimen/box_radius"
            app:boxStrokeWidth="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addFile">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/chooseButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/text_field_parent"
            android:width="332dp"
            android:height="70dp"
            android:fontFamily="@font/montserrat"
            android:padding="12dp"
            android:text="@string/choose_file"
            android:textAllCaps="false"
            app:backgroundTint="@color/splash_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filename" />


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chooseButton"
            app:layout_constraintVertical_bias="0.45" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/uploadButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:width="332dp"
            android:height="70dp"
            android:fontFamily="@font/montserrat"
            android:padding="12dp"
            android:text="@string/upload_file"
            android:textAllCaps="false"
            app:backgroundTint="@color/splash_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar"
            app:layout_constraintVertical_bias="0.73" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>