<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".LoginActivity">

        <TextView
            android:id="@+id/Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/text_field_parent"
            android:fontFamily="@font/montserrat"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/text_box_color"
            android:layout_marginStart="8dp"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="false"
            app:boxCornerRadiusBottomEnd="@dimen/box_radius"
            app:boxCornerRadiusBottomStart="@dimen/box_radius"
            app:boxCornerRadiusTopEnd="@dimen/box_radius"
            app:boxCornerRadiusTopStart="@dimen/box_radius"
            android:layout_marginTop="@dimen/text_field_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Login">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_text"
                android:inputType="textEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:boxBackgroundColor="@color/text_box_color"
            app:boxBackgroundMode="filled"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="false"
            app:boxCornerRadiusBottomEnd="@dimen/box_radius"
            app:boxCornerRadiusBottomStart="@dimen/box_radius"
            app:boxCornerRadiusTopEnd="@dimen/box_radius"
            app:boxCornerRadiusTopStart="@dimen/box_radius"
            android:layout_marginTop="@dimen/text_field_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_text"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintVertical_bias="0.3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:width="332dp"
            android:height="70dp"
            app:backgroundTint="@color/splash_color"
            android:padding="12dp"
            android:text="@string/log_in"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar" />

        <TextView
            android:id="@+id/signUp_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/or_sign_up"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:onClick="onClick"
            android:clickable="true"
            app:layout_constraintTop_toBottomOf="@id/loginButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:focusable="true" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    </layout>