<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context=".SignUpActivity">

        <TextView
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/text_field_parent"
            android:fontFamily="@font/montserrat"
            android:text="@string/sign_up_text"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        app:hintEnabled="false"
        app:boxCornerRadiusBottomEnd="@dimen/box_radius"
        app:boxCornerRadiusBottomStart="@dimen/box_radius"
        app:boxCornerRadiusTopEnd="@dimen/box_radius"
        app:boxCornerRadiusTopStart="@dimen/box_radius"
        android:layout_marginStart="8dp"
        app:boxBackgroundColor="@color/text_box_color"
        android:layout_marginTop="@dimen/text_field_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_text"
            android:fontFamily="@font/montserrat"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/text_box_color"
        app:hintEnabled="false"
        android:layout_marginStart="8dp"
        app:boxStrokeWidth="0dp"
        app:boxCornerRadiusBottomEnd="@dimen/box_radius"
        app:boxCornerRadiusBottomStart="@dimen/box_radius"
        app:boxCornerRadiusTopEnd="@dimen/box_radius"
        app:boxCornerRadiusTopStart="@dimen/box_radius"
        android:layout_marginTop="@dimen/text_field_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_text"
            android:fontFamily="@font/montserrat"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:boxStrokeWidth="0dp"
        app:hintEnabled="false"
        app:boxCornerRadiusBottomEnd="@dimen/box_radius"
        app:boxCornerRadiusBottomStart="@dimen/box_radius"
        app:boxCornerRadiusTopEnd="@dimen/box_radius"
        app:boxCornerRadiusTopStart="@dimen/box_radius"
        app:boxBackgroundColor="@color/text_box_color"
        android:layout_marginTop="@dimen/text_field_margin"
        android:hint="@string/password_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUpButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:width="332dp"
        android:height="70dp"
        app:backgroundTint="@color/splash_color"
        android:textAllCaps="false"
        android:fontFamily="@font/montserrat"
        android:padding="12dp"
        android:text="@string/sign_up_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/or_login_text"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpButton"
        app:layout_constraintVertical_bias="0.58000004" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>